# solana-template

./: .eslintrc.js  .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
.github/workflows/: lint.yml  publish-sdk.yml  test.yml
.trunk/: trunk.yaml
programs/template/: Cargo.toml
programs/template/src/: errors.rs  lib.rs
programs/template/src/instructions/: create_state.rs  mod.rs
programs/template/src/interfaces/: mod.rs  send_tokens.rs  take_tokens.rs
programs/template/src/structs/: state.rs
sdk/: package.json  tsconfig.json
sdk/src/: index.ts  network.ts  template.ts  utils.ts
sdk/src/idl/: amm.ts  template.ts
tests/: template.spec.ts
